--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
   "name": "trustworthy_machine_intelligence_website",
+  "homepage": "https://houmanebrahimi.github.io/trustworthy_machine_intelligence_website",
   "version": "0.1.0",
-  "private": true,
+  "private": false,
   "dependencies": {
     "@emailjs/browser": "^4.2.0",
     "@fortawesome/fontawesome-svg-core": "^6.5.1",
@@ -20,6 +21,8 @@
   },
   "scripts": {
     "start": "react-scripts start",
+    "predeploy" : "npm run build",
+    "deploy": "npm run build && gh-pages -d build",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
