--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "trustworthy_machine_intelligence_website",
-  "homepage": "https://houmanebrahimi.github.io/trustworthy_machine_intelligence_website",
+  "homepage": "https://houmanebrahimi.github.io/trustworthy_machine_intelligence_website/",
   "version": "0.1.0",
-  "private": false,
+  "private": true,
   "dependencies": {
     "@emailjs/browser": "^4.2.0",
     "@fortawesome/fontawesome-svg-core": "^6.5.1",
