--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "trustworthy_machine_intelligence_website",
-  "homepage": "https://houmanebrahimi.github.io/trustworthy_machine_intelligence_website",
+  "homepage": "https://HoumanEbrahimi.github.io/trustworthy_machine_intelligence_website",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
